# anirec

./: .dockerignore  .gitignore  Dockerfile  README.md  anirec.db  main.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  users.txt
.github/workflows/: docker.yaml  main.yml
auth/: schemas.py  security.py
database/: __init__.py  database.py  models.py
recommentations/: recommendations_service.py
repositories/: anime_repository.py  schemas.py  user_repository.py  utils.py
repositories/tests/: anime_repository_tests.py  user_repository_tests.py
services/: anime_service.py  enroll_service.py  schemas.py  user_service.py  utils.py
svc/: anime.py  myanimelist_service.py  schemas.py
templates/: base.html  base_internal.html  index.html
templates/account/: account.html
templates/auth/: login.html  signup.html
templates/internal/: account.html  internal.html  my_anime_list.html  recommendation.html  search.html
test/integration/: test_account.py  test_auth.py
test/locust/: locustfile.py
test/repositories/: test_anime_repository.py  test_user_repository.py
test/services/: test_anime_service.py  test_enroll_service.py  test_user_service.py
test/svc/: test_myanimelist_service.py
test/ui/: index.py  internal.py  login.py  recommendation.py  search.py  signup.py  test_index.py  test_internal.py  test_login.py  test_recommendation.py  test_search.py  ui.py
