[tool.poetry]
name = "anirec"
version = "0.1.0"
description = ""
authors = ["Roman Molochkov <molochkov2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
aiofiles = "^23.2.1"
pydantic = "^2.6.4"
passlib = "^1.7.4"
pytest = "^8.1.1"
requests = "^2.28.0"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.29"
db = "^0.1.1"
myanimelistpy = "^0.1.4"
pyjwt = "^2.8.0"
flake8 = "^7.0.0"
bandit = "^1.7.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

